<!--
  Copyright 2012 The Android Open Source Project
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/light_off"
            style="buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/light_off" />

        <Button
            android:id="@+id/light_on"
            style="buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/light_on" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/switch1"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Light : "
            android:id="@+id/textView3"
            android:layout_weight="0.59"
            android:textSize="24dp"
            android:gravity="center_vertical|center_horizontal" />

        <Spinner
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:id="@+id/mySpinner" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar1"
        android:layout_centerHorizontal="true"
        android:text="@string/text_bar" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/sendfreetyping"
        android:layout_toLeftOf="@+id/sendfreetyping"
        android:layout_toStartOf="@+id/sendfreetyping"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible"
        android:weightSum="1">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/freetyping"
            android:singleLine="true"
            android:maxLength="40"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/linearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/seekBar1"
            android:layout_alignEnd="@+id/seekBar1"
            android:visibility="visible"
            android:layout_weight="0.96" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:background="@drawable/lighting_bar_bg" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/Addr_list" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout5"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/query_log" />

        <ListView
            android:id="@+id/Query_log"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:transcriptMode="alwaysScroll" >
        </ListView>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="send"
        android:id="@+id/sendfreetyping"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentRight="true"
        android:visibility="visible"
        android:layout_alignParentEnd="true" />

</RelativeLayout>